# petal_imu

./: .gitmodules  CMakeLists.txt  Makefile  README.md  application.h  application.mk  application_ble.c  application_lfs.c  application_lorawan.c  application_sensors.c  application_task.c  application_task.h  button_task.c  ldscript.ld  main.c  stub.c
alg/shot_detect/: alg_shotdetect.c  alg_shotdetect.h
application/: application.h  application_alg_shot_detect.c  application_task.c  application_task.h
bsp/: CMakeLists.txt
bsp/drivers/bmi270/: bmi270_hal.c  bmi270_hal.h
bsp/drivers/bmm350/: bmm350.c  bmm350_hal.c  bmm350_hal.h
bsp/drivers/button/: device_button.c  device_button.h
bsp/nm180410/: bsp_pins.src
bsp/petal_imu/: bsp_pins.src
comms/ble/: ble.h  ble_stack.c  ble_task.c  ble_task.h  ble_task_cli.c
comms/ble/amota/: amota_api.h  amota_main.c
comms/ble/amota/profile/: amotas_main.c
comms/ble/amota/service/: svc_amotas.c
comms/lorawan/: lmh_callbacks.c  lmhp_fragmentation.c  lorawan.h  lorawan_se.c  lorawan_task.c  lorawan_task.h  lorawan_task_cli.c
comms/lorawan/soft-se/: soft-se.c
config/: ble_config.h
doc/: aws_iot_add_device.md  aws_iot_add_gateway.md  aws_iot_core_integration.md  getting_started.md
littlefs/: lfs_hal.c  lfs_hal.h
motion/: imu.c  imu.h  mag.c  mag.h
ui/: button_task.c
